Fix horizontal textarea overflow

--- a/src/components/settings/Settings.scss
+++ b/src/components/settings/Settings.scss
@@ -39,6 +39,7 @@
     input,
     textarea {
       width: 100%;
+      resize: vertical;
     }
 
     input[type='checkbox'] {
